Moved file reading out of the TOAs object
TOAs objects can now be created from lists of TOAs (and other supporting
information). To read a toa file, use read_toa_file.

--- a/notebooks/astrometry.ipynb
+++ b/notebooks/astrometry.ipynb
@@ -85,9 +85,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "T."
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
